Security change default password
Signed-off-by: Felipe Brunelli de Andrade <felipe.andrade@zup.com.br>

--- a/install/helm-chart/charts/keycloak/ci/postgres-ha-values.yaml
+++ b/install/helm-chart/charts/keycloak/ci/postgres-ha-values.yaml
@@ -1,6 +1,6 @@
 keycloak:
   replicas: 2
-  password: keycloak
+  password: CHANGEME
 
   podLabels:
     test-label: test-label-value
@@ -28,7 +28,7 @@ keycloak:
     dbVendor: postgres
 
 postgresql:
-  postgresqlPassword: keycloak
+  postgresqlPassword: CHANGEME
   persistence:
     enabled: true
     storageClass: local-path
