--- a/install/helm-chart/charts/mongodb/values.yaml
+++ b/install/helm-chart/charts/mongodb/values.yaml
@@ -79,13 +79,13 @@ usePassword: true
 ## MongoDB admin password
 ## ref: https://github.com/bitnami/bitnami-docker-mongodb/blob/master/README.md#setting-the-root-password-on-first-run
 ##
-mongodbRootPassword: "octopipe"
+mongodbRootPassword: "CHANGEME"
 
 ## MongoDB custom user and database
 ## ref: https://github.com/bitnami/bitnami-docker-mongodb/blob/master/README.md#creating-a-user-and-database-on-first-run
 ##
 mongodbUsername: mongodb
-mongodbPassword: firstpassword
+mongodbPassword: CHANGEME
 mongodbDatabase: octopipe
 
 ## Whether enable/disable IPv6 on MongoDB
