--- a/install/helm-chart/charts/postgresql/values.yaml
+++ b/install/helm-chart/charts/postgresql/values.yaml
@@ -130,7 +130,7 @@ postgresqlUsername: postgres
 ## PostgreSQL password
 ## ref: https://github.com/bitnami/bitnami-docker-postgresql/blob/master/README.md#setting-the-root-password-on-first-run
 ##
-postgresqlPassword: firstpassword
+postgresqlPassword: CHANGEME
 
 ## PostgreSQL password using existing secret
 ## existingSecret: secret
