--- a/.github/workflows/ui-devrelease.yml
+++ b/.github/workflows/ui-devrelease.yml
@@ -24,9 +24,9 @@ jobs:
 
     - run: yarn install
       working-directory: ./ui
-    - run: yarn build:all
-      working-directory: ./ui
     - run: yarn test
+      working-directory: ./ui
+    - run: yarn build
       working-directory: ./ui
       env:
         CI: true
