--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -333,6 +333,10 @@ jobs:
         sed -i -E "s/name: charlescd_(.*)/name: charlescd\1/" ./install/helm-chart/values.yaml &&
         sed -i -E "s/user: charlescd_(.*)/user: charlesadmin/" ./install/helm-chart/values.yaml &&
         sed -i -E "s/password: (.*)/password: firstpassword/" ./install/helm-chart/values.yaml &&
+        sed -i -E "s/internalIdmEnabled: true/internalIdmEnabled: false/" ./install/helm-chart/values.yaml &&
+        sed -i -E "s/isIdmEnabled: \"0\"/isIdmEnabled: \"1\"/" ./install/helm-chart/values.yaml &&
+        sed -i -E "s/authUri: .*\/keycloak/authUri: https:\/\/${{ secrets.IDM_HOST }}" ./install/helm-chart/values.yaml &&
+        sed -i -E "s/authRealm: charlescd/authRealm: Zup" ./install/helm-chart/values.yaml &&
         sed -i -E "/REDIS_PASSWORD/d" ./install/helm-chart/templates/charlescd-circle-matcher-deployment.yaml &&
         sed -i -E "/redis\.password/d" ./install/helm-chart/templates/charlescd-circle-matcher-deployment.yaml &&
         sed -i -E "s/redis-standalone/default/" ./install/helm-chart/templates/charlescd-circle-matcher-deployment.yaml &&
