--- a/octopipe/docker-compose.yaml
+++ b/octopipe/docker-compose.yaml
@@ -1,11 +1,44 @@
-version: "3"
+# to run define K3S_TOKEN, K3S_VERSION is optional, eg:
+#   K3S_TOKEN=${RANDOM}${RANDOM}${RANDOM} docker-compose up
+
+version: '3'
 services:
-  mongo:
-    image: mongo
+
+  server:
+    image: "rancher/k3s:${K3S_VERSION:-latest}"
+    command: server
+    tmpfs:
+    - /run
+    - /var/run
+    privileged: true
     environment:
-      MONGO_INITDB_ROOT_USERNAME: octopipe
-      MONGO_INITDB_ROOT_PASSWORD: octopipe
-    ports:
-      - "27017:27017"
+    - K3S_TOKEN=292752682514621
+    - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
+    - K3S_KUBECONFIG_MODE=666
     volumes:
-      - "./data/mongo:/var/lib/mongo/data"
+    - k3s-server:/var/lib/rancher/k3s
+    # This is just so that we get the kubeconfig file out
+    - .:/output
+    ports:
+    - 6443:6443
+
+  app:
+    image: "bitnami/kubectl:latest"
+    entrypoint: sleep infinity
+    environment:
+      - KUBECONFIG=/app/kubeconfig.yaml
+    volumes:
+      - ./kubeconfig.yaml:/app/kubeconfig.yaml
+
+  # agent:
+  #   image: "rancher/k3s:${K3S_VERSION:-latest}"
+  #   tmpfs:
+  #   - /run
+  #   - /var/run
+  #   privileged: true
+  #   environment:
+  #   - K3S_URL=https://server:6443
+  #   - K3S_TOKEN=292752682514621
+
+volumes:
+  k3s-server: {}
