--- a/octopipe/docker-compose.yaml
+++ b/octopipe/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
     - K3S_TOKEN=292752682514621
     - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
     - K3S_KUBECONFIG_MODE=666
+    - K3S_NODE_NAME=server
     volumes:
     - k3s-server:/var/lib/rancher/k3s
     # This is just so that we get the kubeconfig file out
@@ -21,10 +22,12 @@ services:
 
   app:
     image: "bitnami/kubectl:latest"
-    entrypoint: sleep infinity
+    entrypoint: /app/run.sh
     environment:
       - KUBECONFIG=/app/kubeconfig.yaml
     volumes:
+      - ./manifests:/manifests
+      - ./run.sh:/app/run.sh
       - ./kubeconfig.yaml:/app/kubeconfig.yaml
 
 volumes:
