add overrides to start script to run butler
Signed-off-by: Cassio Godinho <cassiopgodinho@gmail.com>

--- a/octopipe/docker-compose.yaml
+++ b/octopipe/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
       - ./run.sh:/app/run.sh
       - ./kubeconfig.yaml:/app/kubeconfig.yaml
 
-  app:
+  octopipe:
     image: "golang:1.14-buster"
     command: "sleep infinity"
     environment:
