default value charlescd.protected.branches

--- a/moove/web/src/main/resources/application.properties
+++ b/moove/web/src/main/resources/application.properties
@@ -48,4 +48,4 @@ spring.messages.fallback-to-system-locale=false
 spring.message.use-code-as-default-message=true
 charles.internal.idm.enabled=true
 
-charlescd.protected.branches=master,main,develop
+charlescd.protected.branches=master,main,trunk
