--- a/moove/infrastructure/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/moove/infrastructure/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -256,4 +256,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/includes/20200831142700_alter_table_component_add_namespace.yaml
   - include:
+      file: db/changelog/includes/20201006103400_alter_table_component_snapshot_add_namespace.yaml
+  - include:
       file: db/changelog/includes/20201005144300_add_unique_constraint_to_components_table.yaml
