--- a/compass/plugins/datasource/google_analytics/readme.yaml
+++ b/compass/plugins/datasource/google_analytics/readme.yaml
@@ -1,12 +1,13 @@
 name: Google Analytics
 id: google_analytics
 description: My google analytics
-inputs:
-  - name: viewId
-    label: View ID
-    type: text
-    required: true
-  - name: serviceAccount
-    label: Service Account
-    type: textarea
-    required: true
+input_parameters:
+  configuration_inputs:
+    - name: viewId
+      label: View ID
+      type: text
+      required: true
+    - name: serviceAccount
+      label: Service Account
+      type: textarea
+      required: true
