--- a/.github/workflows/compass-ci.yml
+++ b/.github/workflows/compass-ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run Unit tests
         working-directory: ./compass
         run: |
-          go test ./... -v -cover -coverprofile=coverage.out
+          go test -v -coverpkg ./... ./internal/tests/ -coverprofile=coverage.cov
 
       - name: Tests coverage
         uses: codecov/codecov-action@v1.0.13
