--- a/.github/workflows/compass-ci.yml
+++ b/.github/workflows/compass-ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run Unit tests
         working-directory: ./compass
         run: |
-          go test -v -coverpkg ./... ./internal/tests/ -coverprofile=coverage.cov
+          go test -v -coverpkg ./internal/action,./internal/datasource,./internal/dispatcher,./internal/health,./internal/metric,./internal/metricsgroup,./internal/metricsgroupaction,./internal/moove,./internal/plugin ./internal/tests/ -coverprofile=coverage.cov
 
       - name: Tests coverage
         uses: codecov/codecov-action@v1.0.13
