--- a/octopipe/docker-compose.yaml
+++ b/octopipe/docker-compose.yaml
@@ -1,11 +1,62 @@
-version: "3"
+version: '3'
 services:
-  mongo:
-    image: mongo
+
+  server:
+    image: "rancher/k3s:${K3S_VERSION:-latest}"
+    command: server --bind-address server
+    tmpfs:
+    - /run
+    - /var/run
+    privileged: true
     environment:
-      MONGO_INITDB_ROOT_USERNAME: octopipe
-      MONGO_INITDB_ROOT_PASSWORD: octopipe
-    ports:
-      - "27017:27017"
+    - K3S_TOKEN=292752682514621
+    - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
+    - K3S_KUBECONFIG_MODE=666
+    - K3S_NODE_NAME=server
     volumes:
-      - "./data/mongo:/var/lib/mongo/data"
+    - k3s-server:/var/lib/rancher/k3s
+    # This is just so that we get the kubeconfig file out
+    - .:/output
+    ports:
+    - 6443:6443
+
+  registry:
+    image: registry:2.7.1
+    ports:
+      - 5000:5000
+
+  github_mock:
+    build:
+      context: ./mock_resources
+      dockerfile: github.Dockerfile
+    volumes:
+      - ./mock_resources/server.rb:/mock/server.rb
+      - ./mock_resources/charts:/mock/charts/
+    ports:
+    - 4567:4567
+
+  setup:
+    image: "bitnami/kubectl:latest"
+    entrypoint: /app/run.sh
+    environment:
+      - KUBECONFIG=/app/kubeconfig.yaml
+    volumes:
+      - ./manifests:/manifests
+      - ./run.sh:/app/run.sh
+      - ./kubeconfig.yaml:/app/kubeconfig.yaml
+
+  octopipe:
+    image: "golang:1.14-buster"
+    command: "sleep infinity"
+    environment:
+      - KUBECONFIG=OUT_OF_CLUSTER
+    volumes:
+      - ./:/app
+      - ./kubeconfig.yaml:/root/.kube/config
+    ports:
+      - 8080:8080
+    depends_on:
+      - "server"
+
+volumes:
+  k3s-server: {}
