--- a/compass/Makefile
+++ b/compass/Makefile
@@ -35,6 +35,6 @@ cover:
 				$(GOTEST) -v -coverpkg ./internal/action,./internal/datasource,./internal/dispatcher,./internal/health,./internal/metric,./internal/metricsgroup,./internal/metricsgroupaction,./internal/moove,./internal/plugin ./internal/tests/ -coverprofile=cover.out
 				$(GOTOOL) cover -func=cover.out
 cover-browser:
-				$(GOTEST) -v -coverpkg ./... ./internal/tests/ -coverprofile=cover.out
+				$(GOTEST) -v -coverpkg ./internal/action,./internal/datasource,./internal/dispatcher,./internal/health,./internal/metric,./internal/metricsgroup,./internal/metricsgroupaction,./internal/moove,./internal/plugin ./internal/tests/ -coverprofile=cover.out
 				$(GOTOOL) cover -html=cover.out -o cover.html
 				open cover.html
