--- a/moove/infrastructure/src/main/resources/db/changelog/includes/20200831142700_alter_table_component_add_namespace.yaml
+++ b/moove/infrastructure/src/main/resources/db/changelog/includes/20200831142700_alter_table_component_add_namespace.yaml
@@ -10,4 +10,4 @@ databaseChangeLog:
               name: namespace
               type: varchar(255)
               constraints:
-                nullable: false
+                nullable: true
