undoing wrong changes

--- a/moove/web/src/main/resources/application-local.properties
+++ b/moove/web/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/moove
-spring.datasource.username=villager
-spring.datasource.password=villager
+spring.datasource.url=jdbc:postgresql://localhost:5432/charles
+spring.datasource.username=charles
+spring.datasource.password=charles
 
 charlescd.notification.path=/notifications
 charlescd.notification.title.add.member.card="%s te adicionou no card %s"	charlescd.notification.title.add.member.card="%s te adicionou no card %s"
@@ -8,9 +8,9 @@ charlescd.notification.title.add.comment.card="%s comentou no card %s"	charlescd
 charlescd.notification.title.new.feature.card="%s criou uma feature no card %s"	charlescd.notification.title.new.feature.card="%s criou uma feature no card %s"
 charlescd.notification.title.new.release="%s gerou uma release %s" 	charlescd.notification.title.new.release="%s gerou uma release %s"
 
-charlescd.villager.url=http://localhost:8080
+charlescd.villager.url=http://localhost:8883
 charlescd.deploy.url=http://localhost:8883
-charlescd.moove.url=http://localhost:8081
+charlescd.moove.url=http://localhost:8883
 charlescd.notification.url=http://localhost:8883
 charlescd.matcher.url=http://localhost:8883
 charlescd.matcher.path=/segmentation
@@ -23,5 +23,3 @@ charlescd.keycloak.public.clientId=charlescd-public
 charlescd.keycloak.clientId=charlescd
 charlescd.keycloak.clientSecret=your-secret-key
 charles.internal.idm.enabled=true
-
-server.port=8081
