adding horusec job for all CI modules

--- a/.github/workflows/compass-ci.yml
+++ b/.github/workflows/compass-ci.yml
@@ -55,3 +55,9 @@ jobs:
           path: "./compass/..."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Horusec Security
+        working-directory: ./compass
+        run: |
+          curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
+          horus start -p ./
