--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -42,3 +42,8 @@ jobs:
         file: ./ui/coverage/lcov.info
         flags: ui
         fail_ci_if_error: true
+    - name: Horusec Security
+      working-directory: ./ui
+      run: |
+        curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
+        horus start -p ./
