--- a/.github/workflows/villager-ci.yml
+++ b/.github/workflows/villager-ci.yml
@@ -43,8 +43,8 @@ jobs:
     - name: Code style
       run: mvn checkstyle:checkstyle
       working-directory: ./villager
-    - name: Horus Security
+    - name: Horusec Security
       working-directory: ./villager
       run: |
-        curl -fsSL https://horus-assets.s3.amazonaws.com/install.sh | bash -s v1-0-19-alpha-1
+        curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh
         horus start -p ./
