--- a/ui/.env
+++ b/ui/.env
@@ -4,7 +4,8 @@ REACT_APP_AUTH_URI=YOUR_ENV_VARIABLE
 REACT_APP_AUTH_REALM=YOUR_ENV_VARIABLE
 REACT_APP_AUTH_CLIENT_ID=YOUR_ENV_VARIABLE
 REACT_APP_WORKSPACE_ID=UNKNOWN
-REACT_APP_IDM=0
+REACT_APP_IDM=1
 REACT_APP_IDM_LOGIN_URI=YOUR_ENV_VARIABLE
 REACT_APP_IDM_LOGOUT_URI=YOUR_ENV_VARIABLE
 REACT_APP_IDM_REDIRECT_URI=YOUR_ENV_VARIABLE
+REACT_APP_GA=enabled
