--- a/.github/workflows/matcher-s3-sync-devrelease.yml
+++ b/.github/workflows/matcher-s3-sync-devrelease.yml
@@ -30,14 +30,27 @@ jobs:
       env:
         CI: true
 
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v1.0.1
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        path: ./utils/matcher-s3-sync
-        username: ${{secrets.DOCKERHUB_USERNAME}}
-        password: ${{secrets.DOCKERHUB_PASSWORD}}
-        repository: zupcharles/matcher-s3-sync
-        dockerfile: ./utils/matcher-s3-sync/Dockerfile
-        tags: latest
-        tag_with_ref: false
-        tag_with_sha: false
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: matcher-s3-sync
+        IMAGE_TAG: ${{ steps.get_version.outputs.VERSION }}
+      run: |
+        cd utils/matcher-s3-sync
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
