--- a/.github/workflows/octopipe-devrelease.yml
+++ b/.github/workflows/octopipe-devrelease.yml
@@ -22,14 +22,27 @@ jobs:
       with:
         go-version: '^1.14.2'
 
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v1.0.1
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        path: ./octopipe
-        username: ${{secrets.DOCKER_REGISTRY_USERNAME}}
-        password: ${{secrets.DOCKER_REGISTRY_PASSWORD}}
-        registry: realwavelab.azurecr.io
-        repository: octopipe
-        dockerfile: ./octopipe/Dockerfile
-        tag_with_ref: true
-        tag_with_sha: false
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: octopipe
+        IMAGE_TAG: ${{ steps.get_version.outputs.VERSION }}
+      run: |
+        cd octopipe
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
