--- a/.github/workflows/moove-devrelease.yml
+++ b/.github/workflows/moove-devrelease.yml
@@ -47,6 +47,6 @@ jobs:
         ECR_REPOSITORY: charlescd-moove
         IMAGE_TAG: ${{ steps.get_version.outputs.VERSION }}
       run: |
-        cd moove
+        cd moove/web
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
