Fixing matcher s3 pipeline for devrelease.

--- a/.github/workflows/matcher-s3-sync-devrelease.yml
+++ b/.github/workflows/matcher-s3-sync-devrelease.yml
@@ -52,5 +52,5 @@ jobs:
         IMAGE_TAG: ${{ steps.get_version.outputs.VERSION }}
       run: |
         cd utils/matcher-s3-sync
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
