add BUTLER_URL variable
Signed-off-by: Lucas Borges Fernandes <lucasbfernandes94@gmail.com>

--- a/install/helm-chart/templates/charlescd-butler-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-butler-deployment.yaml
@@ -74,6 +74,8 @@ spec:
               value: "http://charlescd-butler.{{ .Release.Namespace }}.svc.cluster.local:3000/notifications"
             - name: OCTOPIPE_URL
               value: "{{ .Values.butler.octopipeHost }}"
+            - name: BUTLER_URL
+              value: "http://charlescd-butler.{{ .Release.Namespace }}.svc.cluster.local:3000"
             - name: ENCRYPTION_KEY
               valueFrom:
                 secretKeyRef:
