--- a/install/helm-chart/single-file.yaml
+++ b/install/helm-chart/single-file.yaml
@@ -1071,6 +1071,8 @@ spec:
               value: "http://charlescd-butler.charles.svc.cluster.local:3000/notifications"
             - name: OCTOPIPE_URL
               value: "http://charlescd-octopipe:8080"
+            - name: BUTLER_URL
+              value: "http://charlescd-butler.charles.svc.cluster.local:3000"
             - name: ENCRYPTION_KEY
               valueFrom:
                 secretKeyRef:
