--- a/.github/workflows/villager-ci.yml
+++ b/.github/workflows/villager-ci.yml
@@ -46,5 +46,5 @@ jobs:
     - name: Horusec Security
       working-directory: ./villager
       run: |
-        curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh
+        curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
         horus start -p ./
