--- a/villager/pom.xml
+++ b/villager/pom.xml
@@ -112,6 +112,11 @@
             <version>${velocity.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq-test</artifactId>
+            <version>3.12.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-tools</artifactId>
             <version>${velocity.tools.version}</version>
