--- a/ui/package.json
+++ b/ui/package.json
@@ -18,12 +18,12 @@
     "debounce-promise": "^3.1.2",
     "http-proxy-middleware": "^1.0.4",
     "jwt-decode": "^2.2.0",
-    "react": "^16.12.0",
+    "react": "17.0.1",
     "react-ace": "^8.1.0",
     "react-apexcharts": "^1.3.6",
     "react-beautiful-dnd": "^13.0.0",
     "react-cookies": "^0.1.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "17.0.1",
     "react-hook-form": "^5.6.2",
     "react-infinite-scroll-component": "^5.0.5",
     "react-popper": "^2.2.3",
