--- a/ui/package.json
+++ b/ui/package.json
@@ -107,7 +107,7 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "dayjs": "^1.8.21",
-    "eslint": "^6.8.0",
+    "eslint": "7.11.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-jest-dom": "^3.1.4",
@@ -125,9 +125,9 @@
     "prettier": "^1.19.1",
     "react-app-rewired": "^2.1.6",
     "react-content-loader": "^5.0.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.0",
     "react-select-event": "^4.1.4",
     "react-test-renderer": "^16.13.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.5"
   }
 }
