--- a/ui/package.json
+++ b/ui/package.json
@@ -104,8 +104,8 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.11",
     "@types/styled-components": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@typescript-eslint/eslint-plugin": "4.6.0",
+    "@typescript-eslint/parser": "4.6.0",
     "dayjs": "^1.8.21",
     "eslint": "7.11.0",
     "eslint-config-prettier": "^6.10.0",
