--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-ui",
+  "name": "charlescd-ui",
   "author": "ZUP Innovation",
   "description": "Charles C.D. | Fastest hypothesis validation with Circle Deployment",
   "version": "0.1.0",
