--- a/install/helm-chart/single-file.yaml
+++ b/install/helm-chart/single-file.yaml
@@ -980,8 +980,10 @@ spec:
             value: "IN_CLUSTER"
           - name: TIMEOUT_RESOURCE_VERIFICATION
             value: "300"
-          
-          
+          - name: LIMIT_REQUESTS_BY_SECOND
+            value: "10"
+          - name: LIMIT_REQUESTS_BURST_BY_SECOND
+            value: "10"
           
                     
           resources:
