adding horusec step for all services CI
Signed-off-by: Nathan Tavares Nascimento <nathan.nascimento@zup.com.br>

--- a/.github/workflows/butler-ci.yml
+++ b/.github/workflows/butler-ci.yml
@@ -58,3 +58,9 @@ jobs:
       with:
         name: unit-test-coverage
         path: ./butler/coverage/lcov-report/
+    - name: Horusec Security
+      working-directory: ./butler
+      run: |
+        curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
+        horus start -p ./
+        
