--- a/.github/workflows/octopipe-ci.yml
+++ b/.github/workflows/octopipe-ci.yml
@@ -51,3 +51,9 @@ jobs:
           path: "./octopipe/..."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Horusec Security
+        working-directory: ./octopipe
+        run: |
+          curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
+          horus start -p ./
