--- a/.github/workflows/matcher-s3-sync-ci.yaml
+++ b/.github/workflows/matcher-s3-sync-ci.yaml
@@ -40,3 +40,8 @@ jobs:
       working-directory: ./utils/matcher-s3-sync/
     - run: npm run lint
       working-directory: ./utils/matcher-s3-sync/
+    - name: Horusec Security
+      working-directory: ./utils/matcher-s3-sync/
+      run: |
+        curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
+        horus start -p ./
