fixing horus calls
Signed-off-by: arthur pucci <arthur.pucci@zup.com.br>

--- a/.github/workflows/butler-ci.yml
+++ b/.github/workflows/butler-ci.yml
@@ -62,5 +62,5 @@ jobs:
       working-directory: ./butler
       run: |
         curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-        horus start -p ./
+        horusec start -p ./
         
