--- a/.github/workflows/circle-matcher-ci.yml
+++ b/.github/workflows/circle-matcher-ci.yml
@@ -44,4 +44,4 @@ jobs:
       working-directory: ./circle-matcher
       run: |
         curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-        horus start -p ./
+        horusec start -p ./
