--- a/.github/workflows/compass-ci.yml
+++ b/.github/workflows/compass-ci.yml
@@ -59,4 +59,4 @@ jobs:
         working-directory: ./compass
         run: |
           curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-          horus start -p ./
+          horusec start -p ./
