--- a/.github/workflows/moove-ci.yaml
+++ b/.github/workflows/moove-ci.yaml
@@ -44,5 +44,5 @@ jobs:
       working-directory: ./moove
       run: |
         curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-        horus start -p ./
+        horusec start -p ./
         
