--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -46,5 +46,5 @@ jobs:
       working-directory: ./ui
       run: |
         curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-        horus start -p ./ 
+        horusec start -p ./ 
         
