--- a/.github/workflows/matcher-s3-sync-ci.yaml
+++ b/.github/workflows/matcher-s3-sync-ci.yaml
@@ -44,4 +44,4 @@ jobs:
       working-directory: ./utils/matcher-s3-sync/
       run: |
         curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-        horus start -p ./
+        horusec start -p ./
