--- a/.github/workflows/villager-ci.yml
+++ b/.github/workflows/villager-ci.yml
@@ -47,5 +47,5 @@ jobs:
       working-directory: ./villager
       run: |
         curl -fsSL https://horusec-cli.s3.amazonaws.com/install.sh | bash
-        horus start -p ./
+        horusec start -p ./
 
