--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -2,6 +2,8 @@ butler:
   enabled: true
   name: "charlescd-butler"
   octopipeHost: "http://charlescd-octopipe:8080"
+  istio:
+    mtls: false
   database:
     name: charlescd_butler
     host: charlescd-postgresql
