--- a/compass/auth.conf
+++ b/compass/auth.conf
@@ -8,4 +8,4 @@ p = sub, obj, act
 e = some(where (p.eft == allow))
 
 [matchers]
-m = r.sub == p.sub && keyMatch(r.obj, p.obj) && (r.act == p.act || p.act == "*")
+m = (regexMatch(r.sub, p.sub) && keyMatch4(r.obj, p.obj) && regexMatch(r.act, p.act))
