--- a/install/helm-chart/templates/charlescd-compass-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-compass-deployment.yaml
@@ -62,6 +62,16 @@ spec:
             value: "{{ .Values.compass.database.password}}"
           - name: DB_NAME
             value: "{{ .Values.compass.database.name}}"
+          - name: MOOVE_DB_HOST
+            value: "{{ .Values.moove.database.host}}"
+          - name: MOOVE_DB_NAME
+            value: "{{ .Values.moove.database.name}}"
+          - name: MOOVE_DB_PORT
+            value: "{{ .Values.moove.database.port }}"
+          - name: MOOVE_DB_USER
+            value: "{{ .Values.moove.database.user}}"
+          - name: MOOVE_DB_PASSWORD
+            value: "{{ .Values.moove.database.password}}"
           {{ range $i, $var := .Values.compass.envVars -}}
           - name: {{ $var.name | upper}}
             value: {{ $var.value | quote}}
