--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -206,6 +206,8 @@ octopipe:
       value: "IN_CLUSTER"
     - name: TIMEOUT_RESOURCE_VERIFICATION
       value: "300"
+    - name: LIMIT_REQUESTS_BY_SECOND
+      value: "10"
 
 compass:
   enabled: true
