Adding max pagination size.

--- a/moove/domain/pom.xml
+++ b/moove/domain/pom.xml
@@ -13,4 +13,11 @@
 
     <artifactId>domain</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
