Adding validations to verify the max value of the size.

--- a/moove/web/src/main/resources/application.properties
+++ b/moove/web/src/main/resources/application.properties
@@ -49,3 +49,5 @@ spring.message.use-code-as-default-message=true
 charles.internal.idm.enabled=true
 
 charlescd.protected.branches=master,main,trunk
+
+spring.data.web.pageable.max-page-size=50
