--- a/circle-matcher/pom.xml
+++ b/circle-matcher/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.4.0</version>
     </parent>
     <groupId>io.charlescd.circlematcher</groupId>
     <artifactId>charlescd-circle-matcher</artifactId>
@@ -33,9 +33,9 @@
 
     <properties>
         <java.version>11</java.version>
-        <groovy.version>2.4.7</groovy.version>
+        <groovy.version>2.5.13</groovy.version>
         <cglib.version>2.2</cglib.version>
-        <spock.version>1.0-groovy-2.4</spock.version>
+        <spock.version>1.3-groovy-2.5</spock.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
         <combinatorics.version>3.3.0</combinatorics.version>
         <jedis.version>3.2.0</jedis.version>
@@ -61,6 +61,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.dpaukov</groupId>
@@ -82,10 +87,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-spring</artifactId>
+            <version>${spock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
             <scope>test</scope>
+            <type>pom</type>
         </dependency>
 
         <dependency>
@@ -93,6 +106,17 @@
             <artifactId>cglib-nodep</artifactId>
             <version>${cglib.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
         </dependency>
 
     </dependencies>
@@ -143,12 +167,12 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.10.0</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>testCompile</goal>
+                            <goal>compileTests</goal>
                         </goals>
                     </execution>
                 </executions>
